--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <Version>1.0.0-temp</Version>
+        <Version>1.0.1-temp</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -14,15 +14,22 @@
         <Authors>Lith</Authors>
         <Description>orm for ClickHouse</Description>
         <PackageProjectUrl>https://github.com/VitormLib/Vitorm.ClickHouse</PackageProjectUrl>
+        <PackageIcon>vitorm_logo_v1.png</PackageIcon>
     </PropertyGroup>
 
     <ItemGroup>
-        <!--<PackageReference Include="ClickHouse.Ado" Version="2.0.5" />-->
-        <PackageReference Include="ClickHouse.Client" Version="7.5.0" /> 
+        <None Include="..\..\doc\vitorm_logo_v1.png">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\Vitorm\src\Vitorm\Vitorm.csproj" />
+        <PackageReference Include="ClickHouse.Client" Version="7.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\Vitorm\src\Vitorm\Vitorm.csproj" />
     </ItemGroup>
 
 </Project>
