--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -25,8 +25,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ClickHouse.Client" Version="7.5.0" />
-        <PackageReference Include="Vitorm" Version="1.0.1" />
+        <PackageReference Include="ClickHouse.Client" Version="7.5.1" />
+        <PackageReference Include="Vitorm" Version="1.0.2-temp-ki20" />
     </ItemGroup>
+
 
 </Project>
