--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
-        <Version>1.0.1</Version>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <Version>1.1.0-preview</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -26,7 +26,7 @@
 
     <ItemGroup>
         <PackageReference Include="ClickHouse.Client" Version="7.5.1" />
-        <PackageReference Include="Vitorm" Version="1.0.2-temp-ki20" />
+        <PackageReference Include="Vitorm" Version="1.1.0-preview-ki1" />
     </ItemGroup>
 
 
