--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -26,7 +26,7 @@
 
     <ItemGroup>
         <PackageReference Include="ClickHouse.Client" Version="7.5.1" />
-        <PackageReference Include="Vitorm" Version="1.1.0-preview-ki1" />
+        <PackageReference Include="Vitorm" Version="1.1.0-preview" />
     </ItemGroup>
 
 
