--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -13,14 +13,20 @@
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>orm for ClickHouse</Description>
-        <PackageProjectUrl>https://github.com/VitormLib/Vitorm.ClickHouse</PackageProjectUrl>
         <PackageIcon>vitorm_logo_v1.png</PackageIcon>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryUrl>https://github.com/VitormLib/Vitorm.ClickHouse</RepositoryUrl>
+        <PackageTags>orm vitorm database ClickHouse</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
         <None Include="..\..\doc\vitorm_logo_v1.png">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\..\README.md">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
         </None>
     </ItemGroup>
 
