--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.0.0-preview</Version>
+        <Version>2.0.0</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -32,7 +32,7 @@
 
     <ItemGroup>
         <PackageReference Include="ClickHouse.Client" Version="7.5.2" />
-        <PackageReference Include="Vitorm" Version="2.0.0-preview" />
+        <PackageReference Include="Vitorm" Version="2.0.0" />
     </ItemGroup>
 
 
