--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -6,16 +6,16 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.0.0</Version>
+        <Version>2.0.1-preview</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>orm for ClickHouse</Description>
+        <PackageProjectUrl>https://github.com/VitormLib/Vitorm.ClickHouse</PackageProjectUrl>
         <PackageIcon>vitorm_logo_v1.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-        <RepositoryUrl>https://github.com/VitormLib/Vitorm.ClickHouse</RepositoryUrl>
         <PackageTags>orm vitorm database ClickHouse</PackageTags>
     </PropertyGroup>
 
@@ -25,14 +25,14 @@
             <PackagePath>\</PackagePath>
         </None>
         <None Include="..\..\README.md">
-          <Pack>True</Pack>
-          <PackagePath>\</PackagePath>
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
         </None>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="ClickHouse.Client" Version="7.5.2" />
-        <PackageReference Include="Vitorm" Version="2.0.0" />
+        <PackageReference Include="Vitorm" Version="2.0.1-preview" />
     </ItemGroup>
 
 
