--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <pack>nuget</pack>
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.0.2</Version>
+        <Version>2.0.3</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -31,9 +31,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ClickHouse.Client" Version="7.6.0" />
-        <PackageReference Include="Vitorm" Version="2.0.2" />
+        <PackageReference Include="ClickHouse.Client" Version="7.6.2" />
+        <PackageReference Include="Vitorm" Version="2.0.3" />
     </ItemGroup>
-
 
 </Project>
