--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.0.5</Version>
+        <Version>2.1.0</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -32,7 +32,8 @@
 
     <ItemGroup>
         <PackageReference Include="ClickHouse.Client" Version="7.6.2" />
-        <PackageReference Include="Vitorm" Version="2.0.5" />
+        <PackageReference Include="Vitorm" Version="[2.1.0, 2.2.0)" />
     </ItemGroup>
+
 
 </Project>
