--- a/test/Vitorm.Data.MsTest/Vitorm.Data.MsTest.csproj
+++ b/test/Vitorm.Data.MsTest/Vitorm.Data.MsTest.csproj
@@ -19,11 +19,13 @@
         <PackageReference Include="MSTest.TestFramework" Version="3.5.1" />
 
         <PackageReference Include="Vit.Core" Version="2.2.0" />
+        <PackageReference Include="Vitorm.Data" Version="[2.1.0, 2.2.0)" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Vitorm.ClickHouse\Vitorm.ClickHouse.csproj" />
     </ItemGroup>
+
 
     <ItemGroup>
         <None Update="appsettings.json">
