--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.1.1-preview</Version>
+        <Version>2.1.1</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -31,8 +31,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ClickHouse.Client" Version="7.6.2" />
-        <PackageReference Include="Vitorm" Version="[2.1.1-preview, 2.2.0)" />
+        <PackageReference Include="ClickHouse.Client" Version="7.7.3" />
+        <PackageReference Include="Vitorm" Version="[2.1.1, 2.2.0)" />
     </ItemGroup>
 
 
