--- a/src/Versions.props
+++ b/src/Versions.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <Version>2.1.2</Version>
-        <Vitorm_Version>[2.1.2, 2.2.0)</Vitorm_Version>
+        <Version>2.2.0-develop</Version>
+        <Vitorm_Version>[2.2.0, 2.3.0)</Vitorm_Version>
     </PropertyGroup>
 </Project>
