--- a/test/Vitorm.ClickHouse.Data.MsTest/Vitorm.ClickHouse.Data.MsTest.csproj
+++ b/test/Vitorm.ClickHouse.Data.MsTest/Vitorm.ClickHouse.Data.MsTest.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    <Import Project="..\..\src\Versions.props" />
 
     <PropertyGroup>
         <test>MSTest</test>
@@ -19,7 +20,7 @@
         <PackageReference Include="MSTest.TestFramework" Version="3.5.2" />
 
         <PackageReference Include="Vit.Core" Version="2.2.0" />
-        <PackageReference Include="Vitorm.Data" Version="[2.1.0, 2.2.0)" />
+        <PackageReference Include="Vitorm.Data" Version="$(Vitorm_Version)"  />
     </ItemGroup>
 
     <ItemGroup>
