--- a/src/Versions.props
+++ b/src/Versions.props
@@ -3,4 +3,13 @@
         <Version>2.2.0-preview</Version>
         <Vitorm_Version>[2.2.0-preview, 2.3.0)</Vitorm_Version>
     </PropertyGroup>
+
+    <PropertyGroup>
+        <Authors>Lith</Authors>
+        <PackageProjectUrl>https://github.com/Vit-Orm/Vitorm.ClickHouse</PackageProjectUrl>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <DocumentationFile>bin\Debug\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
+    </PropertyGroup>
 </Project>
