--- a/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
+++ b/src/Vitorm.ClickHouse/Vitorm.ClickHouse.csproj
@@ -11,12 +11,13 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Authors>Lith</Authors>
         <Description>orm for ClickHouse</Description>
-        <PackageProjectUrl>https://github.com/Vit-Orm/Vitorm.ClickHouse</PackageProjectUrl>
+        <PackageTags>orm vitorm database ClickHouse</PackageTags>
+    </PropertyGroup>
+
+    <PropertyGroup>
         <PackageIcon>vitorm_logo_v1.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-        <PackageTags>orm vitorm database ClickHouse</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
@@ -32,19 +33,7 @@
 
     <ItemGroup>
         <PackageReference Include="ClickHouse.Client" Version="7.7.3" />
-    
-
-    </ItemGroup>
-
-
-    <ItemGroup>
         <PackageReference Include="Vitorm" Version="$(Vitorm_Version)"  />
     </ItemGroup>
-
-
-    <!--<ItemGroup>
-      <ProjectReference Include="..\..\..\Vitorm\src\Vitorm\Vitorm.csproj" />
-    </ItemGroup>-->
-
 
 </Project>
